@@ -1,3 +1,4 @@
+* Popup form dialog has 3 buttons (close, ok, new)
 * New UI layout
 * Add DnD on tree view
 * Merge tree and list views
